10/28/19
********
Feature: Completed initial design of new Status menu and updated to show all stats

10/27/19
********
Feature: Implemented melee, ranged and Tech attack damage calculations incorporating associated new stats

10/26/19
********
Feature: Implemented expanded stats system, started to implement updated damage calculations based on stats

10/25/19
********
Feature: Replaced circular battle indicators with glowing sprite outlines
	Credit: https://github.com/Elringus/SpriteGlow

10/23/19
********
Feature: Added persistent treasure chest functionality
Bug: Fixed player being able to multi-click targets, while also not breaking player move coroutines
	Fix 1: Don't disable game objects attached to coroutines (BattleTargetButton), or the coroutine won't return after a yield
	Fix 2: Use GameObject.transform.localScale = new Vector3(0,0,0) to hide game object without deactivating it

10/22/19
********
Feature: Added basic green/red target indicators in battle
Polish: Added check to not award XP to dead players
Polish: Added brief wait after player attack animation to prevent visual glitches
Bug: Fixed enemy turns not waiting for animations to fully complete
	Fix: Moved both enemy attack coroutines into one, to better control execution
Bug: Fixed ability to trigger random battle instead of Dragon and get Dragon reward
	Fix: Chaged Dragon to use polygon collider, removed overlapping random battle zones

10/21/19
********
Feature: Added check to prevent HP potion from working on dead player
Feature: Added Revive Potion which revives dead player and restores 50 HP
Feature: Added Dwarven Sword reward for dragon quest which does high damage
Polish: Added save confirmation notification
Polish: Added character level display on status screen
Polish: Added code to wait for ability animations to finish before dealing damage and moving to next turn
	Fix 1: Changed enemy and player attacks from functions to coroutines