@@ -7,7 +7,6 @@ using UnityEngine;
 
 public class CharStats : MonoBehaviour
 {
-    // WIP - added new stats
     // creates various variables to handle character stats and attributes
     public string charName, statusEffect, equippedWpn, equippedArmr, equippedAccy;
     public int currentHP, currentMP, strength, tech, endurance, agility, luck, speed;
@@ -15,7 +14,6 @@ public class CharStats : MonoBehaviour
     public float resHeat = 1f, resFreeze = 1f, resShock = 1f, resVirus = 1f, resChem = 1f, resKinetic = 1f, resWater = 1f, resQuantum = 1f;
     public int maxHP = 100, maxMP = 30;
     public int[] mpLvlBonus;
-    //public int defense, wpnPwr, armrPwr;
 
     // creates various variables to handle player level and experience
     public int playerLevel = 1, playerAPLevel = 1;
@@ -28,7 +26,6 @@ public class CharStats : MonoBehaviour
     public Sprite charImage; // creates Sprite to handle character image
 
     public bool isMaxLevel, isMaxAPLevel; // creates bool to handle if player is at max level
-    // END WIP
 
     // Start is called before the first frame update
     void Start()
@@ -44,22 +41,18 @@ public class CharStats : MonoBehaviour
         }
         expToNextLevel[expToNextLevel.Length - 1] = 999999; // sets last element of array (dummy element) to 0
 
-        // NEED TO ADD SIMILAR FUNCTIONALITY FOR AP TO NEXT LEVEL
+        apToNextLevel = new int[] {0, 10, 20, 40, 80, 160, 320, 640, 1280, 2560, 999999}; // initializes apToNextLevel array to default values
     }
 
     // Update is called once per frame
     void Update()
     {
-        
-        /*
-        // *DEBUG ONLY - DISABLED* - adds EXP if "K" key is pressed
+        // *DEBUG ONLY - adds EXP, AP if "K" key is pressed
         if (Input.GetKeyDown(KeyCode.K))  
         {
-            AddExp(1000); // calls AddExp function to increase EXP by 1000
-        }
-        */
-        
-        
+            AddExp(100000); // calls AddExp function to increase EXP by 100000
+            AddAP(1000); // calls AddAP function to increase AP by 1000
+        }        
     }
 
     public void AddExp(int expToAdd) // creates function to add experience to currentExp and check for level-up
@@ -70,9 +63,6 @@ public class CharStats : MonoBehaviour
 
             if (playerLevel < maxLevel) // checks if playerLevel is less than maxLevel to prevent index-out-of-range errors
             {
-
-                // *disabled* replaced with while loop to enable multiple level-ups
-                //if (currentEXP > expToNextLevel[playerLevel]) // checks if currentEXP is larger than next level requirement but player is less than max level
                 // manages EXP and levels up player
                 while (currentEXP >= expToNextLevel[playerLevel]) // continuously checks if currentEXP is larger than next level requirement
                 {
@@ -80,6 +70,7 @@ public class CharStats : MonoBehaviour
                                                                // this makes the expToNextLevel array act as EXP gain requirement rather than overall EXP requirement
                     playerLevel++; // increments player level
 
+                    // ** NEED TO UPDATE TO SUPPORT STAT GAIN TABLES FOR ALL CHARACTERS **
                     if (playerLevel % 2 == 0) // determines whether to add to strength or defense based on odd or even levels
                                               // uses modulo function ('%') to check for even or odd
                     {
@@ -91,9 +82,19 @@ public class CharStats : MonoBehaviour
                     }
 
                     maxHP = Mathf.FloorToInt(maxHP * 1.05f); // increases maxHP based on previous value * 1.05
+                    
+                    if(maxHP > 9999) // checks if maxHP > 9999
+                    {
+                        maxHP = 9999; // clamps maxHP to 9999
+                    }
                     currentHP = maxHP; // restores HP to max on level up
 
-                    maxMP += mpLvlBonus[playerLevel]; // increases maxMP based on explicitly-defined array values
+                    maxMP = Mathf.FloorToInt(maxMP * 1.05f); ; // increases maxMP based on previous value * 1.05
+
+                    if (maxMP > 999) // checks if maxMP > 999
+                    {
+                        maxMP = 999; // clamps maxMP to 999
+                    }
                     currentMP = maxMP; // restores MP to max on level up
                 }
             }
@@ -107,6 +108,33 @@ public class CharStats : MonoBehaviour
         }
     }
 
+    public void AddAP(int apToAdd) // creates function to add AP to currentAP and check for ability level-up
+    {
+        if (currentHP > 0) // checks if player is alive
+        {
+            currentAP += apToAdd; // adds AP to our current AP
+
+            if (playerAPLevel < maxAPLevel) // checks if playerAPLevel is less than maxAPLevel to prevent index-out-of-range errors
+            {
+                // manages AP and levels up player
+                while (currentAP >= apToNextLevel[playerAPLevel]) // continuously checks if currentAP is larger than next AP level requirement
+                {
+                    currentAP -= apToNextLevel[playerAPLevel]; // removes apToNextLevel from current AP
+                                                               // this makes the apToNextLevel array act as AP gain requirement rather than overall AP requirement
+                    playerAPLevel++; // increments player AP level
+
+                    // ** NEED TO UPDATE TO SUPPORT UNLOCKING ABILITIES FOR ALL CHARACTERS **
+                }
+            }
+
+            if (playerAPLevel >= maxAPLevel) // checks if playerLevel is less than maxLevel to prevent unnecessary EXP gain
+            {
+                currentAP = 0; // sets currentEXP to 0 if player is at max level
+
+                isMaxAPLevel = true;
+            }
+        }
+    }
     // NEED FUNCTION TO ADD AP AND CHECK LEVEL
     // VERY SIMILAR TO EXP
 }
